# mpir

msvc/vs22/: CMakeLists.txt
